Bug #19542 InnoDB doesn't increase the Handler_read_prev counter
Submitted: 4 May 2006 21:16 Modified: 22 Jun 2006 9:55
Reporter: Evgeny Potemkin
Status: Closed
Category:Server: InnoDB Severity:S3 (Non-critical)
Version:4.1/4.0/5.0/5.1 OS:
Assigned to: Bugs System Target Version:

[4 May 2006 21:16] Evgeny Potemkin
Description:
The ha_innobase::index_prev() function is defined in sql/ha_innodb.cc at about 3427 line
as 
{
  return(general_fetch(buf, ROW_SEL_PREV, 0));
}
should be
{
  statistic_increment(ha_read_prev_count, &LOCK_status);
  return(general_fetch(buf, ROW_SEL_PREV, 0));
}

How to repeat:
See description.

Suggested fix:
Add the line
 statistic_increment(ha_read_prev_count, &LOCK_status);
[4 May 2006 21:41] Miguel Solorzano
Thank you for the bug report. I noticed that in all versions.
[5 May 2006 16:30] Heikki Tuuri
Osku,

please fix this little bug in 4.1, 5.0, 5.1.

regards,

Heikki
[9 May 2006 9:40] Osku Salerma
Fixed in 4.1, 5.0 and 5.1 in InnoDB's Subversion repositories.
[10 May 2006 14:19] Heikki Tuuri
Patch approved.
[15 May 2006 6:44] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/6368
[15 May 2006 6:51] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/6369
[1 Jun 2006 11:55] Alexander Ivanov
Pushed to 4.1.20, 5.0.22, 5.1.11
[5 Jun 2006 23:19] Mike Hillyer
Documented in changelogs:

      <listitem>
        <para>
          InnoDB did not increment the
          <literal>handler_read_prev</literal> counter. (Bug #19542)
        </para>
      </listitem>
[21 Jun 2006 16:18] Lars Thalmann
This was pushed into 5.1.12
[22 Jun 2006 9:55] MC Brown
This bug report has been into the 5.1.12 Changelog.