storage/innobase/fil/fil0fil.c
@@ -1050,8 +1050,7 @@ try_again:
 
 	space->ibuf_data = NULL;
 
-	rw_lock_create(&(space->latch));
-	rw_lock_set_level(&(space->latch), SYNC_FSP);
+	rw_lock_create(&space->latch, SYNC_FSP);
 
 	HASH_INSERT(fil_space_t, hash, system->spaces, id, space);
 
@@ -1295,9 +1294,7 @@ fil_system_create(
 
 	system = mem_alloc(sizeof(fil_system_t));
 
-	mutex_create(&(system->mutex));
-
-	mutex_set_level(&(system->mutex), SYNC_ANY_LATCH);
+	mutex_create(&system->mutex, SYNC_ANY_LATCH);
 
 	system->spaces = hash_create(hash_size);
 	system->name_hash = hash_create(hash_size);
